legend-engine-xts-deephaven/scratch.txt
Execution error at (resource:/core_deephaven_execution_test/deephaven_execution_tests.pure line:90 column:32), "org.finos.legend.engine.shared.javaCompiler.JavaCompileException: 1 error compiling /_pure/plan/root/Execute.java
/_pure/plan/root/Execute.java:23: error: cannot assign a value to final variable tableSpec
        tableSpec = TicketTable.fromQueryScopeField("nds_desktops")
        ^

/_pure/plan/root/Execute.java
0001:0002 ...
0003 import io.deephaven.client.impl.BarrageSession;
0004 import io.deephaven.client.impl.TableHandle;
0005 import io.deephaven.qst.table.TableSpec;
0006 import io.deephaven.qst.table.TicketTable;
0007 import java.math.*;
0008 import java.util.*;
0009 import java.util.function.*;
0010 import java.util.stream.*;
0011 import org.finos.legend.engine.plan.dependencies.domain.date.DayOfWeek;
0012 import org.finos.legend.engine.plan.dependencies.domain.date.DurationUnit;
0013 import org.finos.legend.engine.plan.dependencies.domain.date.PureDate;
0014 import org.finos.legend.engine.plan.dependencies.util.Library;
0015 import org.finos.legend.engine.plan.execution.stores.deephaven.specifics.IDeephavenExecutionNodeSpecifics;
0016 
0017 public class Execute implements IDeephavenExecutionNodeSpecifics
0018 {
0019     private final TableSpec tableSpec;
0020 
0021     public void Execute()
0022     {
0023         tableSpec = TicketTable.fromQueryScopeField("nds_desktops")
0024                                .select("Desktop_ID", "City_Name", "Desktop_Name");
0025     }
0026 
0027     public TableHandle execute(BarrageSession session)
0028     {
0029         try
0030         {
0031             return session.session().execute(tableSpec);
0032         }
0033         catch (io.deephaven.client.impl.TableHandle.TableHandleException e)
0034         {
0035             throw new RuntimeException(e);
0036         }
0037         catch (InterruptedException e)
0038         {
0039             throw new RuntimeException(e);
0040         }
0041     }
0042 "
